// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Matches the snapshot 1`] = `
.c0 {
  margin: 0;
  padding: 0 1.2rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0 0 15px;
}

.c1 p {
  font-size: 0.875rem;
  margin: 0;
}

.c1::before {
  color: #0080A5;
  content: '•';
  font-size: 2.6em;
  font-weight: 600;
  margin: -0.4em 0 0 -0.5em;
  width: 0.5em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0 0 15px;
}

.c3 p {
  font-size: 0.875rem;
  margin: 0;
}

.c3::before {
  color: #000014;
  content: '•';
  font-size: 2.6em;
  font-weight: 600;
  margin: -0.4em 0 0 -0.5em;
  width: 0.5em;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0 0 15px;
}

.c4 p {
  font-size: 0.875rem;
  margin: 0;
}

.c4::before {
  color: #304E63;
  content: '•';
  font-size: 2.6em;
  font-weight: 600;
  margin: -0.4em 0 0 -0.5em;
  width: 0.5em;
}

.c2 {
  color: #57666E;
  font-size: 0.75rem;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <div>
      <p>
        You
      </p>
      <span
        className="c2"
      >
        Data from your answers
      </span>
    </div>
  </li>
  <li
    className="c3"
    color="#000014"
  >
    <div>
      <p>
        Equisoft Peers
      </p>
      <span
        className="c2"
      >
        Private Equisoft data
      </span>
    </div>
  </li>
  <li
    className="c4"
    color="#304E63"
  >
    <div>
      <p>
        General Peers
      </p>
      <span
        className="c2"
      >
        Publicly accessible data
      </span>
    </div>
  </li>
</ul>
`;

exports[`Theme Wrapper Returns component with default theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #EF483E;
  border-color: #EF483E;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #D41F14;
  border-color: #D41F14;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #FF847C;
  border-color: #FF847C;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;

exports[`Theme Wrapper Returns component with test theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #B3974B;
  border-color: #B3974B;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #FFD86B;
  border-color: #FFD86B;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #736130;
  border-color: #736130;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;
